add changes in config and add new post

--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,10 @@ author: Pulga
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
+  Acerca de Mí: "aboutme"
+  Recursos:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://rebel.ar/@pulganw"
 
 ################
 # --- Logo --- #
